[tool.poetry]
name = "playwright-backend"
version = "0.1.0"
description = ""
authors = ["Василий Субботин <vs@smena.space>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"